--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ HOVER
 
 body {
   color: #757575;
+  font-family: "Roboto", sans-serif;
 }
 
 :root {
@@ -82,6 +83,11 @@ body {
 
 .logo-header {
   color: #000000;
+
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
 .logo-blue {
@@ -90,6 +96,11 @@ body {
 
 .header-nav-list-item {
   color: var(--title-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .header-nav-list-item:hover,
@@ -97,9 +108,12 @@ body {
   color: var(--link-logo-blue);
 }
 
-/* .header-contact-list-item {
-  color: #757575;
-} */
+.header-contact-list-item {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
 
 .header-contact-list-item:hover,
 .header-contact-list-item:focus {
@@ -114,11 +128,26 @@ body {
 
 .hero-title {
   color: var(--white-color);
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .hero-btn {
   color: var(--white-color);
   background-color: var(--link-logo-blue);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 
 .hero-btn:hover,
@@ -129,15 +158,27 @@ body {
 /* benefots section */
 .benefits-item-title {
   color: var(--title-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
-/* .benefits-caption {
-  color: #757575;
-} */
+
+.benefits-caption {
+  font-size: 14px;
+  line-height: 1.71;
+}
 
 /* work section */
 
 .work-section-title {
   color: var(--title-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
 
 /* our team section */
@@ -147,13 +188,25 @@ body {
 }
 .team-section-title {
   color: var(--title-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
 .team-item-title {
   color: var(--title-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
 }
-/* .team-item-caption {
-  color: #757575;
-} */
+.team-item-caption {
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+}
 
 /* FOOTER */
 /* address */
@@ -163,18 +216,27 @@ body {
 
 .logo-footer {
   color: var(--white-color);
+
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 .address {
   font-style: normal;
 }
 .address-city {
   color: var(--white-color);
+
+  font-size: 14px;
+  line-height: 1.71;
 }
-.address-mail {
-  color: rgba(255, 255, 255, 0.6);
-}
+.address-mail,
 .address-phone {
   color: rgba(255, 255, 255, 0.6);
+
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .address-mail:hover,
@@ -191,6 +253,11 @@ body {
 .portfolio-btn {
   color: var(--title-color);
   background-color: #f5f4fa;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
 }
 
 .portfolio-btn:hover,
@@ -201,8 +268,13 @@ body {
 
 .works-item-title {
   color: var(--title-color);
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
-/* .works-item-caption {
-  color: #757575;
+.works-item-caption {
+  font-size: 16px;
+  line-height: 1.88;
 }
- */
